--- a/src/component/css/nav.module.css
+++ b/src/component/css/nav.module.css
@@ -7,7 +7,8 @@
 }
 
 .sticky{
-    position: sticky !important;
+    position: fixed !important;
+    width: 100%;
     top: 0;
 }
 
